<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMaterialCardView"
            android:layout_margin="@dimen/spacing_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_double">

                <TextView
                    android:id="@+id/title1"
                    style="@style/AboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_1"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:text="@string/about_text_1"
                    app:layout_constraintTop_toBottomOf="@+id/title1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMaterialCardView"
            android:layout_margin="@dimen/spacing_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_double">

                <TextView
                    android:id="@+id/title2"
                    style="@style/AboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_2"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/about_text_2"
                    app:layout_constraintTop_toBottomOf="@+id/title2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMaterialCardView"
            android:layout_margin="@dimen/spacing_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_double">

                <TextView
                    android:id="@+id/title3"
                    style="@style/AboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_3"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/about_text_3"
                    app:layout_constraintTop_toBottomOf="@+id/title3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMaterialCardView"
            android:layout_margin="@dimen/spacing_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_double">

                <TextView
                    android:id="@+id/title4"
                    style="@style/AboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_4"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/about_text_4"
                    app:layout_constraintTop_toBottomOf="@+id/title4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMaterialCardView"
            android:layout_margin="@dimen/spacing_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_double">

                <TextView
                    android:id="@+id/title5"
                    style="@style/AboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_5"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/about_text_5"
                    app:layout_constraintTop_toBottomOf="@+id/title5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMaterialCardView"
            android:layout_margin="@dimen/spacing_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_double">

                <TextView
                    android:id="@+id/title6"
                    style="@style/AboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_6"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/about_text_6"
                    app:layout_constraintTop_toBottomOf="@+id/title6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMaterialCardView"
            android:layout_margin="@dimen/spacing_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_double">

                <TextView
                    style="@style/AboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/about_text_7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>